--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,19 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
+   url_launcher: ^5.5.0
+   fluttericon: ^1.0.7
+   material_design_icons_flutter: 4.0.5555
+   get_it: ^4.0.4
+  
+   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  # cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/pic.jpg
+   - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,6 +67,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    
     - family: Lobster
       fonts:
          - asset: fonts/Lobster-Regular.ttf
@@ -80,6 +87,9 @@ flutter:
     - family: Marck
       fonts:
         - asset: fonts/MarckScript-Regular.ttf    
+    - family: PlayFair
+      fonts:
+        - asset: fonts/PlayfairDisplaySC-Regular.ttf  
 
     
           
